<resources>
    <string name="app_name">Final Exams</string>

    <string name="main_play_button">Play</string>
    <string name="main_option_button">Options</string>

    <string name="option_high_score_textview">High Score</string>
    <string name="option_high_score_value_textview">0</string>
    <string name="option_difficulty_textview">Difficulty</string>
    <string name="option_difficulty1_button">Easy</string>
    <string name="option_difficulty2_button">Medium</string>
    <string name="option_difficulty3_button">Hard</string>
    <string name="option_select_category_button">Select category</string>

    <string name="play_timer_textview">00:00</string>
    <string name="play_score_textview">Score: %s</string>
    <string name="play_high_score_textview">High Score: %s</string>

    <string name="gamecard_question_number_textview">Question N°</string>
    <string name="gamecard_question_body_textview">Question body</string>
    <string name="gamecard_question_option1_textview">Option A</string>
    <string name="gamecard_question_option2_textview">Option B</string>
    <string name="gamecard_question_option3_textview">Option C</string>
    <string name="gamecard_question_option4_textview">Option D</string>

    <string name="popup_title_textview">You Lose!</string>
    <string name="popup_score_textview">Score:\n%s</string>
    <string name="popup_high_score_textview">High Score:\n%s</string>
    <string name="popup_retry_button">Try Again</string>
    <string name="popup_home_button">Exit</string>
</resources>