<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Base.Theme.FinalExams"
    android:background="@color/colorPrimary"
    tools:context=".OptionActivity">

    <TextView
        android:id="@+id/HighScoreTextView"
        style="@style/FinalExamsNumberQuestionsTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="150dp"
        android:text="@string/option_high_score_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HighScoreValueTextView"
        style="@style/FinalExamsBodyQuestionsTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="164dp"
        android:text="@string/option_high_score_value_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HighScoreTextView" />

    <TextView
        android:id="@+id/DificultyTextView"
        style="@style/FinalExamsNumberQuestionsTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="170dp"
        android:text="@string/option_difficulty_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/HighScoreTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DificultyTextView">

        <Button
            android:id="@+id/optionEasyButton"
            style="@style/FinalExamsTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_difficulty1_button"
            app:cornerRadius="0dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/optionMediumButton"
            style="@style/FinalExamsTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_difficulty2_button"
            app:cornerRadius="0dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/optionHardButton"
            style="@style/FinalExamsTabButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_difficulty3_button"
            app:cornerRadius="0dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <Button
        android:id="@+id/optionSelectCategoryButton"
        style="@style/FinalExamsButton"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="340dp"
        android:layout_weight="1"
        android:text="@string/option_select_category_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>